Fix alignment of contact us and account sections in header

--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -462,3 +462,11 @@
     margin-left: 2em;
   }
 }
+
+// Align Contact Us with Your Account
+.menu--level-1 > ul:first-child {
+  padding-top: 2px;
+}
+
+
+
